--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 VITE_BROWSER_STORAGE_PREFIX=SP
-VITE_API_URL=https://corporate-test.infinitisoftware.net/sage
+VITE_API_URL=https://47p6l4fd-8000.inc1.devtunnels.ms
