--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "mobx": "^6.15.0",
+    "mobx-react": "^9.2.1",
+    "mobx-react-lite": "^4.1.1",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
@@ -77,6 +80,7 @@
     "recharts": "^2.15.2",
     "redoc": "^2.5.2",
     "sass": "^1.94.0",
+    "styled-components": "^6.1.19",
     "swagger-ui-react": "^5.31.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -102,6 +106,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/styled-components": "^5.1.36",
     "@types/swagger-ui-react": "^5.18.0",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
