--- a/client/public/staticData/config.json
+++ b/client/public/staticData/config.json
@@ -3,6 +3,7 @@
     "21232f297a57a5a743894a0e4a801fc3": {
       "username": "admin@sage.com",
       "password": "Infi@123",
+      "type": "Admin",
       "menu": [
         {
           "title": "Dashboard",
@@ -66,6 +67,7 @@
     "ee11cbb19052e40b07aac0ca060c23ee": {
       "username": "user@sage.com",
       "password": "Infi@123",
+      "type": "User",
       "menu": [
         {
           "title": "Dashboard",
@@ -111,6 +113,7 @@
     "17c4520f6cfd1ab53d8745e84681eb49": {
       "username": "superadmin@sage.com",
       "password": "Infi@123",
+      "type": "Super admin",
       "menu": [
         {
           "title": "Dashboard",
